--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
+# weather api
 weather.url = http://api.openweathermap.org/data/2.5/weather
 weather.apiKey = 054d771b07e711210643486afae3af67
+
+# database properties
+spring.datasource.url=jdbc:mysql://db.bienz.us:3306/movieratings
+spring.datasource.username=movieratingsdb
+spring.datasource.password=MovieRatingsDBPass1!
+spring.jpa.hibernate.ddl-auto=update
